--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aymanbennaceur.github.io/Coffee-Lovers-Final",
+  "homepage": "https://mrwn14.github.io/Coffee-Lovers",
   "name": "coffee-lovers",
   "version": "0.1.0",
   "private": true,
